@@ -1,3 +1,6 @@
+4800.	[bug]		When processing delzone, write one zone config per
+			line to the NZF. [RT #46323]
+
 4799.	[cleanup]	Improve clarity of keytable unit tests. [RT #46407]
 
 4792.	[bug]		Fix map file header correctness check. [RT #38418]
